<resources>
    <string name="app_name">Book Barn</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="classroom_name">Classroom Name</string>
    <string name="enter_new_student_name_here">Enter New Student Name Here</string>
    <string name="add_new_student">Add New Student</string>
    <string name="student_name">Student Name</string>
    <string name="scan">SCAN</string>
    <string name="done">DONE</string>
    <string name="clear_previous">Clear Previous</string>
    <string name="get_all_books">Get All Books</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="bookbarn">BookBarn</string>
    <string name="start_building_your_classroom">Start Building Your Classroom</string>
    <string name="select_an_existing_classroom">Select an existing classroom or create a brand new one</string>
    <string name="enter_new_class_name_here">Enter New Class Name Here</string>
    <string name="add_new_class">ADD NEW CLASS</string>
    <string name="welcome_to_bookbarn">Welcome to BookBarn</string>
    <string name="welcome_to_book_barn">Welcome to Book Barn</string>
    <string name="book_barn">Book Barn</string>
    <string name="book_barn_empowers_children">BookBarn was created to empower children to take ownership over their own reading experiences. BookBarn also motivates students to increase independent reading time and build accountability for what they are reading.</string>
    <string name="whats_next">Book Barn is currently working on some awesome features! Soon users will be able to create and store their information in a private account. Users will eventually be able to create classrooms, select a specific grade level, and receive student questions that pertain to that particular grade level. We will also provide the guided reading book level so that users can easily track which book levels students are reading the most often.</string>
    <string name="about_us">Book Barn was created by an elementary school teacher named Audrey in San Francisco. Audrey knows that students are motivated to read when they are reading about topics that inspire and interest them. Students are also empowered when they are able to show off all that they have read. Audrey made this app with everything she believes excellent literacy education to currently be and with hope for what it will be in the future.</string>
    <string name="ps">And of course, Audrey also made this app with love for all of her students who have inspired and brought her happiness throughout the years.</string>
    <string name="s_books">\'s Books</string>
    <string name="draw_your_favorite_part_of_the_story">Draw your favorite part of the story!</string>
    <string name="wrapping">"wrapping "</string>
    <string name="scan_new_book">Scan a new book</string>
    <string name="no_wifi">No WIFI</string>
    <string name="isbn">ISBN:</string>
    <string name="brush_size">Brush size:</string>
    <string name="eraser_size">Eraser size:</string>
    <string name="new_drawing">New drawing</string>
    <string name="start_new_drawing">Start new drawing (you will lose the current drawing)?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="save_drawing">Save drawing</string>
    <string name="save_drawing_to_device">Save drawing to device Gallery?</string>
    <string name="png">.png</string>
    <string name="drawing">drawing</string>
    <string name="drawing_saved">Drawing saved to Gallery!</string>
    <string name="drawing_not_saved">Oops! Image could not be saved.</string>
    <string name="draw_your_favorite_part">Draw your favorite part of the story!</string>
    <string name="welcome_to_your_barnyard">Welcome to Your Barnyard</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="i_give_this_book">I give this book</string>
    <string name="done_large">DONE</string>
    <string name="student_name_xlarge">Student Name</string>
    <string name="enter_class_name_xlarge">Enter Class Name</string>
    <string name="enter_student_name_xml">Enter Student Name</string>
    <string name="add">ADD</string>
    <string name="student_barnyard">Student Barnyard</string>
    <string name="add_new_book">Add New Book</string>
    <string name="i_give_this_book_xml">I give this book</string>
    <string name="stars">stars</string>
    <string name="done_xml">DONE</string>
    <string name="student_barnyard_book_data">Student Barnyard</string>
    <string name="book_name">Book Name</string>
    <string name="author_name">Author</string>
    <string name="classroom_name_custom_cursoradapter">Classroom Name</string>
    <string name="of_books"># of books</string>
    <string name="student_name_xml">Student Name</string>
    <string name="add_content_main">ADD</string>
    <string name="enter_class_name">Enter Class Name</string>
    <string name="who_created_book_barn">Who Created Book Barn?</string>
    <string name="contact_us">Contact Us</string>
    <string name="questions_comments">Questions? Comments...?</string>
    <string name="email_bookbarnliteracy_gmail_com">Email: bookbarnliteracy@gmail.com</string>
    <string name="how_to_use">How To Use</string>
    <string name="for_teachers">For Teachers</string>
    <string name="_1_create_a_classroom">1. Create a classroom.</string>
    <string name="_2_add_your_students">2. Add your students.</string>
    <string name="_3_check_out_what_your_students_are_reading">3. Check out what your students are reading!</string>
    <string name="for_students">For Students</string>
    <string name="_1_click_on_your_name_or_animal">1. Click on your name or animal.</string>
    <string name="_2_scan_a_book_into_your_bookshelf">2. Scan a book into your bookshelf.</string>
    <string name="_3_sketch_your_favorite_part_of_the_story">3.Sketch your favorite part of the story.</string>
    <string name="_4_rate_your_book">4. Rate your book!</string>
    <string name="why_bookbarn">Why BookBarn?</string>
    <string name="student_name_list_of_students">Student Name</string>
    <string name="get_in_touch_collaborate">Get In Touch | Collaborate</string>
    <string name="contact">Contact Us</string>
    <string name="who_created">Who Created Book Barn?</string>
    <string name="how_to_use_book_barn">How To Use</string>
    <string name="about_book_barn">About Book Barn</string>
    <string name="home">home</string>
    <string name="give_student_name_toast">Give your student a name.</string>
    <string name="give_class_name_toast">Give your class a name.</string>
    <string name="no">No</string>
    <string name="sorry_book_not_found">Sorry. We can\'t find that book.</string>
    <string name="sorry_cant_find_book">Sorry! Can\'t find your book!</string>
</resources>
