<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_bookbarn"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/about_book_barn" />
        <item
            android:id="@+id/nav_how_to_use"
            android:icon="@drawable/ic_local_library_black_24dp"
            android:title="@string/how_to_use_book_barn" />

        <item
            android:id="@+id/nav_who_created"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/who_created" />
    </group>

    <item android:title="@string/get_in_touch_collaborate">
        <menu>
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/contact" />
        </menu>
    </item>

</menu>
