<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:paddingTop="60dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textSize="35dp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/how_to_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="10dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/for_teachers"
            android:textSize="21dp"
            />

        <TextView
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="10dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/_1_create_a_classroom"
            android:textSize="15dp"
            />
        <TextView
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="10dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/_2_add_your_students"
            android:textSize="15dp"
            />
        <TextView
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="10dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/_3_check_out_what_your_students_are_reading"
            android:textSize="15dp"
            />

        <ImageView
            android:paddingTop="45dp"
            android:layout_gravity="center"
            android:src="@drawable/dog"
            android:layout_width="523dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.43" />

        <TextView
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="10dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/for_students"
            android:textSize="21dp"
            />

        <TextView
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="10dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/_1_click_on_your_name_or_animal"
            android:textSize="15dp"
            />
        <TextView
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="10dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/_2_scan_a_book_into_your_bookshelf"
            android:textSize="15dp"
            />
        <TextView
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="10dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/_3_sketch_your_favorite_part_of_the_story"
            android:textSize="15dp"
            />
        <TextView
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="10dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/_4_rate_your_book"
            android:textSize="15dp"
            />

    </LinearLayout>

</FrameLayout>