<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.test.book_barn.activities.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <TextView
        android:text="@string/book_barn"
        android:textSize="27dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/welcome_to_your_barnyard"
        android:textSize="22dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/select_an_existing_classroom"
        android:layout_gravity="center"
        android:textSize = "15dp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:paddingTop="25dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/enter_class_name"
        android:maxLength="21"
        android:id="@+id/main_activity_edit_text_class_name"/>

        <Button
            android:id="@+id/main_activity_button_add_new_class"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="13dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="100sp"
            android:layout_gravity="center"
            android:text="@string/add"
             />

    </LinearLayout>

    <ListView
        android:backgroundTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif-condensed"
        android:id="@+id/main_activity_class_list_view"></ListView>

</LinearLayout>
