<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".activities.AddStudentActivity"
    android:weightSum="1">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:paddingTop="8dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:id="@+id/add_student_activity_back__home_button"
            android:background="@color/colorWhite"
            android:src="@drawable/backarrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <TextView
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:id= "@+id/activity_add_student_classroom_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="90dp"
        android:paddingRight="80dp"
        android:textSize="25dp"
        android:text="@string/classroom_name"
        android:fontFamily="sans-serif-condensed"
        android:textColor="#000000"
        />


    </RelativeLayout>


    <RelativeLayout
        android:paddingTop="25dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <EditText
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_student_name_xml"
        android:maxLength="24"
        android:fontFamily="sans-serif-condensed"
        android:id="@+id/add_student_activity_edit_text_class_name"/>

    <Button
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="14dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:text="@string/add"
        android:id="@+id/add_student_activity_class_button"/>

    </RelativeLayout>

    <ListView
        android:fontFamily="sans-serif-condensed"
        android:layout_width="match_parent"
        android:layout_height="262dp"
        android:id="@+id/add_student_activity_class_list_view"
        android:layout_weight="0.77">
    </ListView>

    <Button
        android:id="@+id/add_student_activity_view_data_button"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/student_barnyard"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="83dp" />

</LinearLayout>
